# SideQuest

./: .gitignore  .pre-commit-config.yaml  README.md  justfile  pyproject.toml
tests/: conftest.py  util.py
tests/fixtures/: account.py
tests/unit/: test_account.py  test_saved_routes.py
webapp/: __init__.py  app.py  blueprints.py  config.py  constant.py  navbar.py
webapp/account/: forms.py  routes.py  service.py
webapp/account/models/: __init__.py  user.py
webapp/account/templates/: change-password.html  edit-registration.html  forgot-password.html  login.html  register.html  reset-password.html  reset_password.html
webapp/core/app/: blueprint.py  custom_blueprint.py  endpoint.py  errors.py  extensions.py  factory.py  flask_jsglue.py
webapp/core/db/: base_csv.py  base_enum.py  base_model.py  engine.py  mapped_types.py  utils.py
webapp/core/models/: __init__.py  email_log.py  setting.py
webapp/core/service/: emailer.py  logger.py  settings.py
webapp/core/templates/: macros.j2  simple.html
webapp/core/templates/jsglue/: js_bridge.js
webapp/core/templates/partials/: base.html  cdn.html  footer.html  navbar.html
webapp/core/ui/: base_form.py  datatable_serverside.py  filters.py  form_fields.py  form_utils.py  name_for.py  navbar.py  simple_page.py
webapp/core/util/: date.py  download_file.py  formatting.py  jinja.py  misc.py  name_for.py  request_params.py  string.py  timer.py  traceback.py  types.py
webapp/landing/: routes.py
webapp/landing/templates/: landing.html
webapp/migrations/: env.py  script.py.mako
webapp/migrations/versions/: 2026011407_template_init.py  2026031914_remove_settings.py  2026031915_users_have_usernames_instead_of_emails.py  2026033110_add_saved_routes.py  2026042517_add_email_to_users.py
webapp/osm/: cache.py  routes.py  service.py
webapp/osm/models/: __init__.py  saved_route.py
webapp/osm/templates/: adventure.html  index.html  route_detail.html  stop_selection.html  trip_preferences.html
webapp/osm/templates/partials/: auth.html  preferences.html  route.html  route_detail.html  saved_routes.html  stops.html
webapp/static/: robots.txt
webapp/static/js/: app.js  auth.js  datatables.js  forms.js  map.js  route.js  route_detail.js  stops.js  utils.js
webapp/static/scss/: _auth.scss  _buttons.scss  _development.scss  _dropdown.scss  _forms.scss  _layout.scss  _menu.scss  _modal.scss  _panels.scss  _reset_password.scss  _route_detail.scss  _tables.scss  _variables.scss  main.scss
webapp/static_pages/: routes.py
webapp/static_pages/templates/: index.html
