[project]
name = "SideQuest"
description = "A Flask website to suggest detours for road trips."
readme = "README.md"
version = "0.1.0"
requires-python = "==3.12.*"

## ==================== APP DEPENDENCIES ==================== ##
dependencies = [
    # Core WebApp
    "flask",                    # Web framework
    "flask-assets",             # Bundling assets for browsers
    "flask-login",              # User authentication and sessions
    "flask-mail",               # Email sending functionality
    "flask-wtf",                # Forms and CSRF protection
    "python-dateutil",          # Date/time parsing and manipulation utilities
    "python-dotenv",            # Load environment variables from .env files
    "requests",                 # HTTP client library for external API calls
    "cssmin",                   # CSS minification
    "libsass",                  # Sass/SCSS stylesheet compilation
    "rjsmin",                   # JavaScript minification

    # Database
    "pymysql",                  # Synchronous MySQL database driver
    "sqlalchemy",               # The Python SQL Toolkit and Object Relational Mapper
    "sqlalchemy-utils",         # Extra SQLAlchemy utilities and data types

    # Validation
    "email_validator",          # Validate email addresses
    "password-strength",        # Password strength and validation
    "pydantic",                 # Data validation using Python type hints
    "pydantic-settings",        # Settings management using Pydantic

    # Deployment
    "alembic",                  # Database schema migrations for SQLAlchemy
    "gunicorn",                 # WSGI HTTP server
]

[dependency-groups]
dev = [
    "complexipy",               # Code complexity analyzer and cyclomatic complexity checker
    "coverage",                 # Code coverage measurement and reporting
    "pre-commit",               # Git pre-commit formatting (see .pre-commit-config.yaml)
    "pyrefly",                  # Type checking (meta's version of mypy)
    "ruff",                     # Formatting and linting

    # PyTest
    "py",                       # Common pytest utilities and helpers
    "pyquery",                  # jQuery-like HTML parsing and manipulation - replaces ugly beautiful soup
    "pytest",                   # Testing framework
    "pytest-clarity",           # Enhanced test failure output and diffs
    "pytest-sugar",             # Prettier test output with progress bars
    "pytest-xdist",             # Parallel test execution (-n <CPUs>)

    # Type Stubs
    "types-libsass", 
    "types-pymysql", 
    "types-python-dateutil", 
    "types-requests", 
    "types-sqlalchemy-utils", 
    "types-wtforms",
]


## ==================== ALEMBIC ==================== ##
[tool.alembic]
script_location = "webapp/migrations"
prepend_sys_path= ["webapp"]
file_template = "%%(year)d%%(month).2d%%(day).2d%%(hour).2d_%%(slug)s"
revision_environment = false


## ==================== RUFF ==================== ##
# https://docs.astral.sh/ruff/settings
[tool.ruff]
src = ["webapp", "tests"]
indent-width = 4
line-length = 100
output-format="grouped"

[tool.ruff.format]
docstring-code-format = true
indent-style = "space"
line-ending = "lf"
quote-style = "double"
skip-magic-trailing-comma = false

# https://docs.astral.sh/ruff/rules
[tool.ruff.lint]
exclude = []
select = [
    "E4",       # imports
    "E7",       # comparisons
    "E9",       # io errors
    "F",        # pyflakes
    "N",        # naming convention
    "RUF",      # ruff
    "W1",       # tab indentation
    "W2",       # whitespace
]
ignore = [
    "RUF010",   # str() to !s conversion
    "N812",     # lowercase imported as uppercase
]

[tool.ruff.lint.isort]
known-first-party = ["webapp", "tests"]
forced-separate = ["webapp", "tests"]
order-by-type = true

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true
mypy-init-return = true
suppress-none-returning = true


## ==================== PYREFLY (type checking ==================== ##
# https://pyrefly.org/en/docs/configuration
[tool.pyrefly]
search-path = [".", "webapp"]
permissive-ignores = true
output-format = "min-text"

# https://pyrefly.org/en/docs/error-kinds
[tool.pyrefly.errors]
bad-assignment = false


## ==================== COMPLEXIPY ==================== ##
# https://rohaquinlop.github.io/complexipy/#configuration
[tool.complexipy]
paths = [".", "webapp", "tests"]
failed = true
sort = "desc"


## ==================== PYTEST ==================== ##
# https://docs.pytest.org/en/stable/reference/customize.html
[tool.pytest.ini_options]
filterwarnings = ["ignore"]
pythonpath = [".", "webapp", "tests"]
testpaths = ["tests"]
addopts = ["--numprocesses=1"] # set to 'auto' once the test suite grows


## ==================== COVERAGE ==================== ##
# https://coverage.readthedocs.io/en/latest/config.html
[tool.coverage.run]
source = ["webapp"]
omit = ["*/migrations/*"]
